bin/Current_Build_Warnings.txt
In file included from main.c:20:0:
main.c: In function 'main':
main.c:53:37: error: 'Rotate' undeclared (first use in this function)
   TL_PARSEARGS_ADD_FLAG("--rotate", Rotate, 1)
                                     ^
include/TL_0_01d.h:278:3: note: in definition of macro 'TL_PARSEARGS_ADD_FLAG'
   y = Value;TL_PARSEARGS_OCCURED=TRUE; \
   ^
main.c:53:37: note: each undeclared identifier is reported only once for each function it appears in
   TL_PARSEARGS_ADD_FLAG("--rotate", Rotate, 1)
                                     ^
include/TL_0_01d.h:278:3: note: in definition of macro 'TL_PARSEARGS_ADD_FLAG'
   y = Value;TL_PARSEARGS_OCCURED=TRUE; \
   ^
include/TL_0_01d.h:231:6: warning: variable 'TL_Enforce_Exception_Occured' set but not used [-Wunused-but-set-variable]
  int TL_Enforce_Exception_Occured
      ^
main.c:36:2: note: in expansion of macro 'TL_PARSEARGS_INSTALL'
  TL_PARSEARGS_INSTALL();
  ^
include/TL_0_01d.h:229:6: warning: variable 'TL_Initial_Argc' set but not used [-Wunused-but-set-variable]
  int TL_Initial_Argc = 0;  \
      ^
main.c:36:2: note: in expansion of macro 'TL_PARSEARGS_INSTALL'
  TL_PARSEARGS_INSTALL();
  ^
In file included from main.c:21:0:
include/Fillmc.h:34:6: warning: unused variable 'EdgesOnly' [-Wunused-variable]
  int EdgesOnly=0;   \
      ^
main.c:34:2: note: in expansion of macro 'initVars'
  initVars();
  ^
include/Fillmc.h:33:6: warning: unused variable 'Hollow' [-Wunused-variable]
  int Hollow=0;    \
      ^
main.c:34:2: note: in expansion of macro 'initVars'
  initVars();
  ^
include/Fillmc.h:32:6: warning: variable 'HeightOffsetStop' set but not used [-Wunused-but-set-variable]
  int HeightOffsetStop=0;  \
      ^
main.c:34:2: note: in expansion of macro 'initVars'
  initVars();
  ^
include/Fillmc.h:31:6: warning: variable 'HeightOffsetStart' set but not used [-Wunused-but-set-variable]
  int HeightOffsetStart=0; \
      ^
main.c:34:2: note: in expansion of macro 'initVars'
  initVars();
  ^
include/Fillmc.h:30:6: warning: unused variable 'MinHeight' [-Wunused-variable]
  int MinHeight=0;   \
      ^
main.c:34:2: note: in expansion of macro 'initVars'
  initVars();
  ^
include/Fillmc.h:29:6: warning: unused variable 'MaxHeight' [-Wunused-variable]
  int MaxHeight=HEIGHT_MAX; \
      ^
main.c:34:2: note: in expansion of macro 'initVars'
  initVars();
  ^
main.c:33:8: warning: unused variable 'File_Output' [-Wunused-variable]
  char *File_Output = NULL;
        ^
main.c:32:8: warning: unused variable 'File_Input' [-Wunused-variable]
  char *File_Input = NULL;
        ^
main.c:30:8: warning: unused variable 'Passed_Shape' [-Wunused-variable]
  char *Passed_Shape = NULL;
        ^
main.c:28:7: warning: unused variable 'OutputFile' [-Wunused-variable]
  char OutputFile[500]="ncp.out";
       ^
main.c:26:6: warning: unused variable 'MODE' [-Wunused-variable]
  int MODE=0;
      ^
